	 menu_data.c,scaler.c,select.c,widget.[ch],widget_internals.h}:
	 replace the three 'select' widgets (machine, scaler, joystick)
	 with one generalised one.
20040401 machine.c,machines/: general tidy-up of the machines/ directory.
20040401 machine.c,settings.dat,machines/{Makefile.am,machines.h,
	 specplus3.[ch],specplus3e.c}: Spectrum +3e support.
20040402 machines/specplus3e.c: make the +3e be a +3e not a +3.
20040402 tape.c: use libspectrum_tape_write().
20040402 display,c,machine.c,machines/,memory.h,spectrum.c: remove use of
	 the read_screen_memory function.
20040402 machine.c,machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,
	 spec48.c,specplus2.c,specplus2a.c,specplus3.c,specplus3e.c,
	 tc2048.c,tc2068.c}: move call to machine_set_timings() from
	 individual init functions to machine_add_machine.
20040402 utils.c: when opening a disk image, don't switch machine type
	 if the current machine supports this kind of disk.
20040402 tape.c: add tape trap checks for the +3e.
20040403 widget/roms.c: Fix ROM name lookup for labels
20040403 widget/select.c: Add <string.h> for strlen
20040403 ui/sdl/sdldisplay.c: Fix icon overlays for timex machines
20040403 ui.c: Add <string.h> for strncpy and strcmp
20040404 ay.h,sound.h,machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,
	 spec48.c,specplus2.c,specplus2a.c,specplus3.c,specplus3e.c,
	 tc2048.c,tc2068.c}: remove use of ayinfo.present.
20040406 input.c,input.h,keyboard.h,settings.dat: make the 'real joystick
	 fire' action configurable to be either 'emulated joystick fire'
	 or 'press a key'.
20040407 ui/gtk/{browse.c,debugger.c,pokefinder.c}: prevent segfault if
	 the keyboard (space) is used to select things from a GtkCList
	 (Darren).
20040407 joystick.[ch]: add emulation of the two Sinclair-type joysticks.
20040408 input.c,keyboard.[ch],keysyms.pl: use hash tables rather than
	 linear lookup to do the three levels of keyboard remapping.
20040408 ui/gtk/debugger.c: add a simple memory map pane.