@@ -171,6 +171,7 @@ pentagon_memoryport_write( libspectrum_word port GCC_UNUSED,
 
   memory_map[0].page = &ROM[ rom ][0x0000];
   memory_map[1].page = &ROM[ rom ][0x2000];
+  memory_map[0].reverse = memory_map[1].reverse = MEMORY_PAGE_OFFSET_ROM + rom;
 
   memory_map[6].page = &RAM[ page ][0x0000];
   memory_map[7].page = &RAM[ page ][0x2000];
