@@ -150,7 +150,7 @@ spec48_reset( void )
 
   memory_map[0].page = &ROM[0][0x0000];
   memory_map[1].page = &ROM[0][0x2000];
-  memory_map[0].reverse = memory_map[1].reverse = -1;
+  memory_map[0].reverse = memory_map[1].reverse = MEMORY_PAGE_OFFSET_ROM;
 
   memory_map[2].page = &RAM[5][0x0000];
   memory_map[3].page = &RAM[5][0x2000];
