@@ -142,12 +142,16 @@ z80_do_opcodes( void )
 	trdos_active = 0;
 	memory_map[0].page = &ROM[ machine_current->ram.current_rom ][0x0000];
 	memory_map[1].page = &ROM[ machine_current->ram.current_rom ][0x2000];
+	memory_map[0].reverse = memory_map[1].reverse =
+	  MEMORY_PAGE_OFFSET_ROM + machine_current->ram.current_rom;
       }
     } else if( ( PC & 0xff00 ) == 0x3d00 &&
 	       machine_current->ram.current_rom ) {
       trdos_active = 1;
       memory_map[0].page = &ROM[2][0x0000];
       memory_map[1].page = &ROM[2][0x2000];
+      memory_map[0].reverse = memory_map[1].reverse =
+	MEMORY_PAGE_OFFSET_ROM + 2;
     }
 
     END_CHECK
